# ship

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: lint-and-test.yaml  publish.yaml
docs/decisions/: 2026-05-22-markdown-rendering.md  2026-05-22-multi-source-vaults.md  2026-05-22-retro-summaries.md
src/ship/: __init__.py  auth.py  cache.py  collapse.py  content.py  dev.py  markdown.py  middleware.py  routes.py  vault.py
src/ship/static/css/: style.css
src/ship/static/js/: filter.js  scroll.js
src/ship/templates/: 401.html  403.html  404.html  _feed_fragment.html  _log_fragment.html  _plans_fragment.html  _retros_fragment.html  _timeline_fragment.html  base.html  bridge.html  captains_log.html  course.html  observation_deck.html  porthole.html
tests/: conftest.py  test_auth.py  test_cache.py  test_collapse.py  test_content.py  test_markdown.py  test_middleware.py  test_routes.py
tests/fixtures/: active-work-index.md  daily-entry-1.md  daily-entry-2.md  daily-entry-3.md  daily-entry-4.md  retro-summary-2.md  retro-summary.md  weekly-plan-2.md  weekly-plan.md  weekly-summary-2.md  weekly-summary.md
